circuitbreaking/my-circuitbreaking.yaml
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
#  name: circuit-breaker-for-the-entire-default-namespace
  name: grouping-rules-for-our-canary-release
  namespace: default
spec:
  host: fastapi-service # Service
  subsets:
    - labels: # SELECTOR.
        version: v01 # find pods with label "safe"
      name: v01
    - labels:
        version: v03
      name: v03
  trafficPolicy:
    outlierDetection: # Circuit Breakers HAVE TO BE SWITCHED ON
      maxEjectionPercent: 100
      consecutive5xxErrors: 2
      interval: 10s
      baseEjectionTime: 30s
