circuitbreaking/my-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - my-gateway
  http:
    - match:
        - uri:
            exact: /
      route:
        - destination:
            host: fastapi-service
            subset: v01
            port:
              number: 30000
          weight: 80
        - destination:
            host: fastapi-service
            subset: v03
            port:
              number: 30000
          weight: 20
      # Add the following to enable circuit breaking:
      retries:
        attempts: 3
        perTryTimeout: 1s
        retryOn: 500 # Only retry on 503 Service Unavailable errors
      fault:
        delay:
          fixedDelay: 5s
          percent: 100
        abort:
          httpStatus: 500
          percent: 100 # Abort 50% of requests to test backend resilience
    - match:
        - uri:
            exact: /predictions/densenet161
      route:
        - destination:
            host: torch-serving-service
            port:
              number: 8080
    - match:
        - uri:
            exact: /v1/models/test_model:predict
      route:
        - destination:
            host: tf-serving-service
            port:
              number: 8501
